Fix z-index on Client when it uses the ooMenu suggester
This is an alternative fix instead of
https://github.com/wmde/ValueView/pull/69

--- a/client/resources/jquery.wikibase/jquery.wikibase.linkitem.css
+++ b/client/resources/jquery.wikibase/jquery.wikibase.linkitem.css
@@ -22,3 +22,8 @@
 .wbclient-linkItem-input {
 	margin: 20px;
 }
+
+/* Fix for the ooMenu based suggester, the dialog is at about 1002 */
+.ui-suggester-list.ui-ooMenu {
+	z-index: 2000;
+}
